# justmytyp

./: Cargo.toml  README.md  flake.nix
src/: config.rs  main.rs  upload.rs
src/pdf/: context.rs  mod.rs  world.rs
src/tests/: mod.rs  test.typ
