[package]
name = "justmytyp"
description = "An HTTP server that renders Typst templates with JSON input."
version = "0.1.0-alpha"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.8.8"
env_logger = "0.11.9"
figment = { version = "0.10.19", features = ["env"] }
log = { version = "0.4.29", features = ["serde"] }
s3 = { version = "0.1.18", default-features = false, features = ["async", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
tar = "0.4.44"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["compression-full", "decompression-full", "timeout"] }
typst = "0.14.2"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }
typst-pdf = "0.14.2"
ureq = "3.2.0"
zune-inflate = { version = "0.2.54", default-features = false, features = ["gzip", "std"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.dev]
debug = "line-tables-only"

[lints.clippy]
all = "deny"
pedantic = "warn"
style = "warn"
